first, second and bottom sectin merge conflicts resolved

--- a/index.html
+++ b/index.html
@@ -247,6 +247,15 @@
             <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
           </div>
         </div>
+        <div class="row content-flex-panel">
+          <div class="col-md-4 img-col">
+            <img src="assets/images/small-block1.png" alt="Small image block">
+          </div>
+          <div class="col-md-8 text-col">
+            <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+            <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+          </div>
+        </div>
 
 
 
@@ -419,15 +428,6 @@
         </div>
 
         <h3>LATEST NEWS</h3>
-        <div class="row content-flex-panel">
-          <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-            <img src="assets/images/small-block1.png" alt="Small image block">
-          </div>
-          <div class="col-md-7 col-sm-7 col-xs-7 text-col">
-            <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
-            <h4>By Nigel Farage </h4>
-          </div>
-        </div>
         <div class="row content-flex-panel">
           <div class="col-md-5 col-sm-5 col-xs-5 img-col">
             <img src="assets/images/small-block1.png" alt="Small image block">
@@ -720,11 +720,257 @@ BOTTOM SECTION
 ============================== -->
 
 
+<div class="container content">
 
+  <div class="">
+    <h3>U.S.</h3>
+  </div>
+
+  <div class="row us-section">
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us1.png" alt="Image">
+        <h3>Woman Awarded $21M After Being Forced To Work Sundays</h3>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us2.png" alt="Image">
+        <h3>Lawyer: Motive for Taking Jayme Closs Will Be Revealed</h3>
+      </div>
+
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="">
+    <h3>World</h3>
+  </div>
+
+  <div class="row us-section">
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us1.png" alt="Image">
+        <h3>Woman Awarded $21M After Being Forced To Work Sundays</h3>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us2.png" alt="Image">
+        <h3>Lawyer: Motive for Taking Jayme Closs Will Be Revealed</h3>
+      </div>
+
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="">
+    <h3>Business</h3>
+  </div>
+
+  <div class="row us-section">
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us1.png" alt="Image">
+        <h3>Woman Awarded $21M After Being Forced To Work Sundays</h3>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us2.png" alt="Image">
+        <h3>Lawyer: Motive for Taking Jayme Closs Will Be Revealed</h3>
+      </div>
+
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="">
+    <h3>Culture</h3>
+  </div>
+
+  <div class="row us-section">
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us1.png" alt="Image">
+        <h3>Woman Awarded $21M After Being Forced To Work Sundays</h3>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us2.png" alt="Image">
+        <h3>Lawyer: Motive for Taking Jayme Closs Will Be Revealed</h3>
+      </div>
+
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="">
+    <h3>Sports</h3>
+  </div>
+
+  <div class="row us-section">
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us1.png" alt="Image">
+        <h3>Woman Awarded $21M After Being Forced To Work Sundays</h3>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="img-card">
+        <img src="assets/images/us2.png" alt="Image">
+        <h3>Lawyer: Motive for Taking Jayme Closs Will Be Revealed</h3>
+      </div>
+
+    </div>
+    <div class="col-md-4 col-xs-12">
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+      <div class="row content-flex-panel">
+        <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+          <img src="assets/images/small-block1.png" alt="Small image block">
+        </div>
+        <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+          <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+          <h4>By Nigel Farage </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
 <!--- The bottom section ends -->
+
+
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
