footer-bottom created

--- a/index.html
+++ b/index.html
@@ -990,7 +990,33 @@ BOTTOM SECTION
 
     </div>
   </div>
-  <div class="footer-bottom">
+  <div class="footer-bottom row">
+    <div class="col-md-8">
+      <a href="#">About Us</a>
+      <a href="#">Corrections</a>
+      <a href="#">Contact Us</a>
+      <a href="#">Travel</a>
+      <a href="#">Advertise</a>
+      <a href="#">Copyright</a>
+      <a href="#">Terms & Conditions</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Cookie Policy</a>
+      <a href="#">Terms of Sale</a>
+      <a href="#">Archive</a>
+      <a href="#">Announcements</a>
+      <a href="#">Consent preferences</a>
+
+    </div>
+    <div class="col-md-4">
+      <span><strong>Editions:</strong></span>
+      <a href="#">U.S. Edition</a>
+      <a href="#">Middle East</a>
+      <a href="#">日本</a>
+      <a href="#">한국</a>
+      <a href="#">Pakistan</a>
+      <a href="#">Polska</a>
+      <a href="#">România</a>
+    </div>
 
   </div>
 </footer>
