repeated images changed

--- a/index.html
+++ b/index.html
@@ -572,38 +572,38 @@
 
       <div class="row">
         <div class="col-md-3">
-          <img src="assets/images/1.png" alt="Blog-post-image">
+          <img src="assets/images/mag1.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
         <div class="col-md-3">
-          <img src="assets/images/1.png" alt="Blog-post-image">
+          <img src="assets/images/mag2.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
         <div class="col-md-3">
-          <img src="assets/images/1.png" alt="Blog-post-image">
+          <img src="assets/images/mag3.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
         <div class="col-md-3">
-          <img src="assets/images/1.png" alt="Blog-post-image">
+          <img src="assets/images/mag4.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
       </div>
 
       <div class="row mg-top">
         <div class="col-md-3">
-          <img src="assets/images/1.png" alt="Blog-post-image">
+          <img src="assets/images/mag5.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
         <div class="col-md-3">
-          <img src="assets/images/1.png" alt="Blog-post-image">
+          <img src="assets/images/mag6.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
         <div class="col-md-3">
-          <img src="assets/images/1.png" alt="Blog-post-image">
+          <img src="assets/images/mag7.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
         <div class="col-md-3">
-          <img src="assets/images/1.png" alt="Blog-post-image">
+          <img src="assets/images/mag8.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
       </div>
@@ -689,15 +689,15 @@
 
       <div class="row">
         <div class="col-md-4">
-          <img src="assets/images/3.png" alt="Blog-post-image">
+          <img src="assets/images/fea1.png" alt="Blog-post-image">
           <h4><a href="#">Ranked: The North American Cities with the Highest Quality of Life</a></h4>
         </div>
         <div class="col-md-4">
-          <img src="assets/images/3.png" alt="Blog-post-image">
+          <img src="assets/images/fea2.png" alt="Blog-post-image">
           <h4><a href="#">Ranked: The North American Cities with the Highest Quality of Life</a></h4>
         </div>
         <div class="col-md-4">
-          <img src="assets/images/3.png" alt="Blog-post-image">
+          <img src="assets/images/fea3.png" alt="Blog-post-image">
           <h4><a href="#">Ranked: The North American Cities with the Highest Quality of Life</a></h4>
         </div>
       </div>
@@ -727,7 +727,7 @@ BOTTOM SECTION
 
 <div class="container content">
 
-  <div class="">
+  <div class="title">
     <h3><a href="#">U.S.</a></h3>
   </div>
 
@@ -776,7 +776,7 @@ BOTTOM SECTION
     </div>
   </div>
 
-  <div class="">
+  <div class="title">
     <h3><a href="#">World</a></h3>
   </div>
 
@@ -825,7 +825,7 @@ BOTTOM SECTION
     </div>
   </div>
 
-  <div class="">
+  <div class="title">
     <h3><a href="#">Business</a></h3>
   </div>
 
@@ -873,7 +873,7 @@ BOTTOM SECTION
       </div>
     </div>
   </div>
-  <div class="">
+  <div class="title">
     <h3><a href="#">Culture</a></h3>
   </div>
 
@@ -921,7 +921,7 @@ BOTTOM SECTION
       </div>
     </div>
   </div>
-  <div class="">
+  <div class="title">
     <h3><a href="#">Sports</a></h3>
   </div>
 
