new images added to news

--- a/index.html
+++ b/index.html
@@ -832,13 +832,13 @@ BOTTOM SECTION
   <div class="row us-section">
     <div class="col-md-4 col-xs-12">
       <div class="img-card">
-        <img src="assets/images/usimage1.png" alt="Image">
+        <img src="assets/images/bul1.png" alt="Image">
         <h3><a href="#">Woman Awarded $21M After Being Forced To Work Sundays</a></h3>
       </div>
     </div>
     <div class="col-md-4 col-xs-12">
       <div class="img-card">
-        <img src="assets/images/usimage2.png" alt="Image">
+        <img src="assets/images/bul2.png" alt="Image">
         <h3><a href="#">Lawyer: Motive for Taking Jayme Closs Will Be Revealed</a></h3>
       </div>
 
@@ -846,7 +846,7 @@ BOTTOM SECTION
     <div class="col-md-4 col-xs-12">
       <div class="row content-flex-panel">
         <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-          <img src="assets/images/smallblock1.png" alt="Small image block">
+          <img src="assets/images/bul3.png" alt="Small image block">
         </div>
         <div class="col-md-7 col-sm-7 col-xs-7 text-col">
           <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
@@ -855,7 +855,7 @@ BOTTOM SECTION
       </div>
       <div class="row content-flex-panel">
         <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-          <img src="assets/images/smallblock1.png" alt="Small image block">
+          <img src="assets/images/bul4.png" alt="Small image block">
         </div>
         <div class="col-md-7 col-sm-7 col-xs-7 text-col">
           <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
@@ -880,13 +880,13 @@ BOTTOM SECTION
   <div class="row us-section">
     <div class="col-md-4 col-xs-12">
       <div class="img-card">
-        <img src="assets/images/usimage1.png" alt="Image">
+        <img src="assets/images/cul1.png" alt="Image">
         <h3><a href="#">Woman Awarded $21M After Being Forced To Work Sundays</a></h3>
       </div>
     </div>
     <div class="col-md-4 col-xs-12">
       <div class="img-card">
-        <img src="assets/images/usimage2.png" alt="Image">
+        <img src="assets/images/cul2.png" alt="Image">
         <h3><a href="#">Lawyer: Motive for Taking Jayme Closs Will Be Revealed</a></h3>
       </div>
 
@@ -894,7 +894,7 @@ BOTTOM SECTION
     <div class="col-md-4 col-xs-12">
       <div class="row content-flex-panel">
         <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-          <img src="assets/images/smallblock1.png" alt="Small image block">
+          <img src="assets/images/cul3.png" alt="Small image block">
         </div>
         <div class="col-md-7 col-sm-7 col-xs-7 text-col">
           <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
@@ -903,7 +903,7 @@ BOTTOM SECTION
       </div>
       <div class="row content-flex-panel">
         <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-          <img src="assets/images/smallblock1.png" alt="Small image block">
+          <img src="assets/images/cul4.png" alt="Small image block">
         </div>
         <div class="col-md-7 col-sm-7 col-xs-7 text-col">
           <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
@@ -912,7 +912,7 @@ BOTTOM SECTION
       </div>
       <div class="row content-flex-panel">
         <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-          <img src="assets/images/smallblock1.png" alt="Small image block">
+          <img src="assets/images/cul5.png" alt="Small image block">
         </div>
         <div class="col-md-7 col-sm-7 col-xs-7 text-col">
           <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
@@ -928,13 +928,13 @@ BOTTOM SECTION
   <div class="row us-section">
     <div class="col-md-4 col-xs-12">
       <div class="img-card">
-        <img src="assets/images/usimage1.png" alt="Image">
+        <img src="assets/images/sport1.png" alt="Image">
         <h3><a href="#">Woman Awarded $21M After Being Forced To Work Sundays</a></h3>
       </div>
     </div>
     <div class="col-md-4 col-xs-12">
       <div class="img-card">
-        <img src="assets/images/usimage2.png" alt="Image">
+        <img src="assets/images/sport2.png" alt="Image">
         <h3><a href="#">Lawyer: Motive for Taking Jayme Closs Will Be Revealed</a></h3>
       </div>
 
@@ -942,7 +942,7 @@ BOTTOM SECTION
     <div class="col-md-4 col-xs-12">
       <div class="row content-flex-panel">
         <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-          <img src="assets/images/smallblock1.png" alt="Small image block">
+          <img src="assets/images/sp1.png" alt="Small image block">
         </div>
         <div class="col-md-7 col-sm-7 col-xs-7 text-col">
           <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
@@ -951,7 +951,7 @@ BOTTOM SECTION
       </div>
       <div class="row content-flex-panel">
         <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-          <img src="assets/images/smallblock1.png" alt="Small image block">
+          <img src="assets/images/sp2.png" alt="Small image block">
         </div>
         <div class="col-md-7 col-sm-7 col-xs-7 text-col">
           <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
@@ -960,7 +960,7 @@ BOTTOM SECTION
       </div>
       <div class="row content-flex-panel">
         <div class="col-md-5 col-sm-5 col-xs-5 img-col">
-          <img src="assets/images/smallblock1.png" alt="Small image block">
+          <img src="assets/images/sp3.png" alt="Small image block">
         </div>
         <div class="col-md-7 col-sm-7 col-xs-7 text-col">
           <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
