code review edits: white spaces between sections removed

--- a/index.html
+++ b/index.html
@@ -207,15 +207,7 @@
             <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
           </div>
         </div>
-        <div class="row content-flex-panel">
-          <div class="col-md-4 img-col">
-            <img src="assets/images/smallblock1.png" alt="Small image block">
-          </div>
-          <div class="col-md-8 text-col">
-            <h3><a href="#">Federal Workers Raise $400,000 on GoFundMe </a></h3>
-            <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
-          </div>
-        </div>
+
         <div class="row content-flex-panel">
           <div class="col-md-4 img-col">
             <img src="assets/images/smallblock1.png" alt="Small image block">
@@ -332,6 +324,15 @@
     <div class="col-md-3 col-sm-6 col-xs-12">
       <div class="opinion">
         <h3><a href="#">OPINION</a></h3>
+        <div class="row content-flex-panel">
+          <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+            <img src="assets/images/thumbnail.png" alt="Small image block">
+          </div>
+          <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+            <h4><a href="#">Farage: Second Vote May Win the Brexit We Want| Opinion </a></h4>
+            <h4><a href="#">By Nigel Farage </a></h4>
+          </div>
+        </div>
         <div class="row content-flex-panel">
           <div class="col-md-4 col-sm-4 col-xs-4 img-col">
             <img src="assets/images/thumbnail.png" alt="Small image block">
