small mergin issue fixed in megazine section.

--- a/index.html
+++ b/index.html
@@ -569,10 +569,10 @@
   <div class="container">
 
       <h1 class="text-center">IN THE MAGAZINE</h1>
-      <div class="border"></div>
 
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 mg-m-tp">
+          <div class="border"></div>
           <img src="assets/images/mag1.png" alt="Blog-post-image">
           <h4><a href="#">Justice for America: Al-Qaeda Militant Dead</a></h4>
         </div>
